--- a/dpnm/dpnm.css
+++ b/dpnm/dpnm.css
@@ -52,8 +52,8 @@ form {
 }
 
 h4 {
-  word-spacing: 100px;
-  margin-left: 70px;
+  word-spacing: 80px;
+  margin-left: 55px;
 }
 
 .new-task input {
@@ -93,8 +93,8 @@ li {
   border-bottom: #eee solid 1px;
 }
 
-li .text {
-  margin-left: 20px;
+li .text {  /* This text is the display of the info */
+  margin-left: 0px;
 }
 
 li.checked {
@@ -110,7 +110,7 @@ li.private {
   border-color: #ddd;
 }
 
-span.text {       /* This text is the display of the info */
+span.text {
   word-spacing: 25px;
   padding-left: 10px;
 }
