--- a/dpnm/dpnm.css
+++ b/dpnm/dpnm.css
@@ -55,8 +55,6 @@ h4 {
   table-layout: fixed;
 }
 
-
-
 .new-task input {
   box-sizing: border-box;
   padding: 10px 0;
@@ -68,6 +66,20 @@ h4 {
 }
 
 .new-task input:focus{
+  outline: 0;
+}
+
+.change-email input {
+  box-sizing: border-box;
+  padding: 10px 0;
+  background: transparent;
+  border: none;
+  width: 100%;
+  padding-right: 0px;
+  font-size: 1em;
+}
+
+.change-email input:focus{
   outline: 0;
 }
 
